# wandb_preempt

./: .conda_env.yml  .envrc  .gitignore  LICENSE  README.md  changelog.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: lint-black.yaml  lint-darglint.yaml  lint-flake8.yaml  lint-isort.yaml  lint-pydocstyle.yaml  python-publish.yaml  test.yaml
docs/: api.md  develop.md  walkthrough.md
example/: README.md  launch.sh  sweep.yaml  train.py
test/: __init__.py  test___init__.py  utils.py
test/example/: __init__.py  test_train.py
wandb_preempt/: __init__.py  checkpointer.py
