# This file is used to configure the project.
# Read more about the various options under:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# MAIN LIBRARY
[project]
name = "wandb_preempt"
authors = [
    { name = "Felix Dangel" },
    { name = "Scott Lowe" },
]
urls = { Repository = "https://github.com/f-dangel/wandb_preempt" }
description = "Code and tutorial on integrating wandb with slurm pre-emption"
readme = { file = "README.md", content-type = "text/markdown; charset=UTF-8; variant=GFM" }
license = { text = "MIT" }
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
# Dependencies of the project:
dependencies = [
    "torch",
    "wandb",
]

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
requires-python = ">=3.9"

[project.optional-dependencies]
# Dependencies needed to run the tests (comma/line-separated)
# Dependencies needed to run the tests.
test = [
    "coveralls",
    "pytest",
    "pytest-cov",
    "pytest-optional-tests",
    "torchvision",
]

# Dependencies needed for linting (comma/line-separated)
lint = [
    "black",
    "flake8",
    "mccabe",
    "pycodestyle",
    "pyflakes",
    "pep8-naming",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-tidy-imports",
    "darglint",
    "pydocstyle",
    "isort",
]

# Dependencies needed to run the example (comma/line-separated)
example = [
    "torchvision",
]

# Dependencies needed to generate the documentation (comma/line-separated), uses
# pinned versions to avoid future breakdowns
doc = [
    "mkdocs==1.4.3",
    "mkdocs-material==9.1.17",
    "mkdocstrings[python]==0.22.0",
    "griffe==0.45.3",
]

[tool.setuptools_scm]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
src_paths = ["wandb_preempt", "tests"]

[tool.pydocstyle]
convention = "google"
match = '.*\.py'
# exclude directories, see
# https://github.com/PyCQA/pydocstyle/issues/363#issuecomment-625563088
match_dir = '^(?!(test|.git)).*'
